--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ anyhow = "1.0.28"
 derive_more = { version = "2.0.1", features = ["debug"] }
 once_cell = "1.17.1"
 mock_instant = "0.5"
+unicode-segmentation = "1.10.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = [
