chore: move old test to example. fix formatting

--- a/examples/multi_logger.yml
+++ b/examples/multi_logger.yml
@@ -10,17 +10,16 @@ appenders:
         level: error
   file:
     kind: file
-    path: error.log
+    path: info.log
     encoder:
       pattern: "{d} [{t}] {l} {M}:{m}{n}"
 
 root:
-  level: warn
   appenders:
   - console
 
 loggers:
-  test::a:
+  multi_logger_config::a:
     level: info
     appenders:
     - file
