--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ parking_lot = { version = "0.12.0", optional = true }
 thiserror = "1.0.15"
 anyhow = "1.0.28"
 derivative = "2.2"
+once_cell = "1.17.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
@@ -94,4 +95,8 @@ required-features = ["console_appender", "file_appender", "rolling_file_appender
 
 [[example]]
 name = "compile_time_config"
+required-features = ["yaml_format", "config_parsing"]
+
+[[example]]
+name = "multi_logger_config"
 required-features = ["yaml_format", "config_parsing"]
