--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,3 +96,7 @@ required-features = ["console_appender", "file_appender", "rolling_file_appender
 [[example]]
 name = "compile_time_config"
 required-features = ["yaml_format", "config_parsing"]
+
+[[example]]
+name = "multi_logger_config"
+required-features = ["yaml_format", "config_parsing"]
