Correct Merge Conflict Correctly
Co-authored-by: Bryan Conn <30739012+bconn98@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,5 +101,6 @@ required-features = ["yaml_format", "config_parsing"]
 name = "log_to_file_with_rolling"
 required-features = ["file_appender", "rolling_file_appender", "size_trigger"]
 
+[[example]]
 name = "multi_logger_config"
 required-features = ["yaml_format", "config_parsing"]
