Create an example of logging with file rotation (#295)
* Create an example of logging with file rotation

* Fix filename extension

* Add example to Cargo.toml

* Move configuration values out of main to top

* Correct Merge Conflict Correctly

Co-authored-by: Bryan Conn <30739012+bconn98@users.noreply.github.com>

* Use rustfmt on nightly

---------

Co-authored-by: Bryan Conn <30739012+bconn98@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,5 +98,9 @@ name = "compile_time_config"
 required-features = ["yaml_format", "config_parsing"]
 
 [[example]]
+name = "log_to_file_with_rolling"
+required-features = ["file_appender", "rolling_file_appender", "size_trigger"]
+
+[[example]]
 name = "multi_logger_config"
 required-features = ["yaml_format", "config_parsing"]
