--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "log4rs"
 version = "1.3.0"
-authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
+authors = [
+    "Steven Fackler <sfackler@gmail.com>",
+    "Evan Simmons <esims89@gmail.com>",
+]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/estk/log4rs"
@@ -13,7 +16,13 @@ rust-version = "1.69"
 [features]
 default = ["all_components", "config_parsing", "yaml_format"]
 
-config_parsing = ["humantime", "serde", "serde-value", "typemap-ors", "log/serde"]
+config_parsing = [
+    "humantime",
+    "serde",
+    "serde-value",
+    "typemap-ors",
+    "log/serde",
+]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
@@ -27,13 +36,21 @@ fixed_window_roller = []
 size_trigger = []
 time_trigger = ["rand"]
 onstartup_trigger = []
-json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "log/serde", "thread-id"]
+json_encoder = [
+    "serde",
+    "serde_json",
+    "chrono",
+    "log-mdc",
+    "log/serde",
+    "thread-id",
+]
 pattern_encoder = ["chrono", "log-mdc", "thread-id"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
 threshold_filter = []
 background_rotation = []
+log_kv = ["log/kv"]
 
 all_components = [
     "console_appender",
@@ -47,7 +64,7 @@ all_components = [
     "onstartup_trigger",
     "json_encoder",
     "pattern_encoder",
-    "threshold_filter"
+    "threshold_filter",
 ]
 
 gzip = ["flate2"]
@@ -58,7 +75,9 @@ harness = false
 
 [dependencies]
 arc-swap = "1.6"
-chrono = { version = "0.4.23", optional = true, features = ["clock"], default-features = false }
+chrono = { version = "0.4.23", optional = true, features = [
+    "clock",
+], default-features = false }
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
 humantime = { version = "2.1", optional = true }
@@ -72,14 +91,20 @@ serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
 toml = { version = "<0.8.10", optional = true }
 parking_lot = { version = "0.12.0", optional = true }
-rand = { version = "0.8", optional = true}
+rand = { version = "0.8", optional = true }
 thiserror = "1.0.15"
 anyhow = "1.0.28"
 derivative = "2.2"
 once_cell = "1.17.1"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
+winapi = { version = "0.3", optional = true, features = [
+    "handleapi",
+    "minwindef",
+    "processenv",
+    "winbase",
+    "wincon",
+] }
 
 [target.'cfg(not(windows))'.dependencies]
 libc = { version = "0.2", optional = true }
@@ -98,7 +123,11 @@ required-features = ["json_encoder", "console_appender"]
 
 [[example]]
 name = "log_to_file"
-required-features = ["console_appender", "file_appender", "rolling_file_appender"]
+required-features = [
+    "console_appender",
+    "file_appender",
+    "rolling_file_appender",
+]
 
 [[example]]
 name = "compile_time_config"
