adding wasm as target

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,9 @@ winapi = { version = "0.3", optional = true, features = [
 [target.'cfg(not(windows))'.dependencies]
 libc = { version = "0.2", optional = true }
 
+[target.'cfg(not(wasm))'.dependencies]
+thread-id = { version = "4", optional = true }
+
 [dev-dependencies]
 lazy_static = "1.4"
 streaming-stats = "0.2.3"
