--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,14 @@ fixed_window_roller = []
 size_trigger = []
 time_trigger = ["rand"]
 onstartup_trigger = []
-json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "log/serde", "thread-id"]
-pattern_encoder = ["chrono", "log-mdc", "thread-id"]
+json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "log/serde"]
+pattern_encoder = ["chrono", "log-mdc"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
 threshold_filter = []
 background_rotation = []
+non_wasm = ["thread-id"]
 
 all_components = [
     "console_appender",
@@ -66,7 +67,6 @@ log = { version = "0.4.20", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0.196", optional = true, features = ["derive"] }
 serde-value = { version = "0.7", optional = true }
-thread-id = { version = "4", optional = true }
 typemap-ors = { version = "1.0.0", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
@@ -83,6 +83,9 @@ winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef
 
 [target.'cfg(not(windows))'.dependencies]
 libc = { version = "0.2", optional = true }
+
+[target.'cfg(not(wasm))'.dependencies]
+thread-id = { version = "4", optional = true }
 
 [dev-dependencies]
 lazy_static = "1.4"
