--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.69"
 [features]
 default = ["all_components", "config_parsing", "yaml_format"]
 
-config_parsing = ["humantime", "serde", "serde-value", "typemap-ors", "log/serde"]
+config_parsing = ["humantime", "serde", "serde-value", "log/serde"]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
@@ -67,7 +67,6 @@ log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0.196", optional = true, features = ["derive"] }
 serde-value = { version = "0.7", optional = true }
 thread-id = { version = "4", optional = true }
-typemap-ors = { version = "1.0.0", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
 toml = { version = "<0.8.10", optional = true }
