msrv 1.75, update deps

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,8 @@ jobs:
       env:
         USER: "test-user"
 
-    - name: Upload to codecov.io
-      uses: codecov/codecov-action@v3
-      with:
-        fail_ci_if_error: true
+    # fix the rate limited upload
+    # - name: Upload to codecov.io
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #     fail_ci_if_error: true
