--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,7 +92,7 @@ parking_lot = { version = "0.12.0", optional = true }
 rand = { version = "0.9", optional = true }
 thiserror = "2.0.12"
 anyhow = "1.0.28"
-derivative = "2.2"
+derive_more = { version = "2.0.1", features = ["debug"] }
 once_cell = "1.17.1"
 mock_instant = "0.5"
 
