--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ all_components = [
 ]
 
 gzip = ["flate2"]
+zstd = ["dep:zstd"]
 
 [[bench]]
 name = "rotation"
@@ -77,6 +78,7 @@ chrono = { version = "0.4.23", optional = true, features = [
     "clock",
 ], default-features = false }
 flate2 = { version = "1.0", optional = true }
+zstd = { version = "0.13", optional = true }
 fnv = "1.0"
 humantime = { version = "2.1", optional = true }
 log = { version = "0.4.21", features = ["std"] }
