--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,9 +74,7 @@ harness = false
 
 [dependencies]
 arc-swap = "1.6"
-chrono = { version = "0.4.23", optional = true, features = [
-    "clock",
-], default-features = false }
+chrono = { version = "0.4.37", optional = true, features = ["clock"], default-features = false }
 flate2 = { version = "1.0", optional = true }
 zstd = { version = "0.13", optional = true }
 fnv = "1.0"
