--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "log4rs"
-version = "1.3.0"
+version = "1.4.0-rc1"
 authors = [
     "Steven Fackler <sfackler@gmail.com>",
     "Evan Simmons <esims89@gmail.com>",
@@ -74,7 +74,9 @@ harness = false
 
 [dependencies]
 arc-swap = "1.6"
-chrono = { version = "0.4.37", optional = true, features = ["clock"], default-features = false }
+chrono = { version = "0.4.37", optional = true, features = [
+    "clock",
+], default-features = false }
 flate2 = { version = "1.0", optional = true }
 zstd = { version = "0.13", optional = true }
 fnv = "1.0"
