--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ compound_policy = []
 delete_roller = []
 fixed_window_roller = []
 size_trigger = []
-time_trigger = ["rand"]
+time_trigger = ["rand", "getrandom"]
 json_encoder = [
     "serde",
     "serde_json",
@@ -85,7 +85,6 @@ log = { version = "0.4.21", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0.196", optional = true, features = ["derive"] }
 serde-value = { version = "0.7", optional = true }
-thread-id = { version = "5", optional = true }
 typemap-ors = { version = "1.0.0", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
@@ -111,7 +110,11 @@ winapi = { version = "0.3", optional = true, features = [
 libc = { version = "0.2", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-thread-id = { version = "4", optional = true }
+thread-id = { version = "5", optional = true }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+getrandom = { version = "0.3.3", features = ["wasm_js"], optional = true }
+
 
 [dev-dependencies]
 lazy_static = "1.4"
