--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ config_parsing = [
     "typemap-ors",
     "log/serde",
 ]
-yaml_format = ["serde_yaml"]
+yaml_format = ["serde-saphyr"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
@@ -87,7 +87,7 @@ serde = { version = "1.0.196", optional = true, features = ["derive"] }
 serde-value = { version = "0.7", optional = true }
 typemap-ors = { version = "1.0.0", optional = true }
 serde_json = { version = "1.0", optional = true }
-serde_yaml = { version = "0.9", optional = true }
+serde-saphyr = { version = "0.0.7", optional = true }
 toml = { version = "<0.8.10", optional = true }
 parking_lot = { version = "0.12.0", optional = true }
 rand = { version = "0.9", optional = true }
